wrapped fish movement around screen and added client correction

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,10 +4,81 @@ html,body {
 	margin: 0;
 	padding: 0;
 	border-width: 0;
+	background-color:black;
 }
 
 canvas#mycanvas {
 	background-color:#69D2E7;
 	margin:auto;
-	display:block;
+	position:relative;
+	display:inline;
+ 	background-image: linear-gradient(bottom, rgb(37,47,156) 0%, rgb(9,148,136) 50%, rgb(158,182,255) 75%);
+	background-image: -o-linear-gradient(bottom, rgb(37,47,156) 0%, rgb(9,148,136) 50%, rgb(158,182,255) 75%);
+	background-image: -moz-linear-gradient(bottom, rgb(37,47,156) 0%, rgb(9,148,136) 50%, rgb(158,182,255) 75%);
+	background-image: -webkit-linear-gradient(bottom, rgb(37,47,156) 0%, rgb(9,148,136) 50%, rgb(158,182,255) 75%);
+	background-image: -ms-linear-gradient(bottom, rgb(37,47,156) 0%, rgb(9,148,136) 50%, rgb(158,182,255) 75%);
+	background-image: -webkit-gradient(
+		linear,
+		left bottom,
+		left top,
+		color-stop(0, rgb(37,47,156)),
+		color-stop(0.5, rgb(9,148,136)),
+		color-stop(0.75, rgb(158,182,255))
+	);
 }
+
+div#pond-container {
+	margin:auto;
+	width:1255px;
+	height:640px;
+}
+
+div#instructions {
+	position:fixed;
+	z-index:2;
+}
+
+div.instructions {
+	display:none;
+	position:relative;
+	left:50px;
+	z-index:2;
+	font-weight:bold;
+	font-size:28px;
+	font-family:helvetica,arial;
+}
+
+div#instructions1 {
+	top:50px;
+}
+
+div#instructions2 {
+	top:100px;
+}
+
+div#credits {
+	text-align:right;
+	position:fixed;
+	bottom:0;
+	right:0;
+	z-index:2;
+	font-size:12px;
+	font-family:helvetica,arial;
+	color:white;
+}
+
+div#credits div {
+	position:relative;
+	bottom:10px;
+	right:10px;
+	z-index:2;
+}
+
+div#credits a {
+	color:white;
+}
+div#credits a:hover {
+	background-color:white;
+	color:black;
+}
+
